Opps fix the default config up

--- a/default.config.yml
+++ b/default.config.yml
@@ -5,7 +5,7 @@ configure_osx: true
 
 # Set to 'true' to configure the Dock via dockutil.
 configure_dock: true
-dockitems_remove: []
+dockitems_remove:
  - TV
  - Podcasts
  - News
