Remove this redundancy

--- a/default.config.yml
+++ b/default.config.yml
@@ -50,9 +50,7 @@ homebrew_installed_packages:
   - gpg
   - openssl
 
-homebrew_taps:
-  - homebrew/core
-  - homebrew/cask
+homebrew_taps: []
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
