--- a/default.config.yml
+++ b/default.config.yml
@@ -19,20 +19,21 @@ dockitems_remove:
  - FaceTime
  - Notes
  - Music
- - 'System Preferences'
+ - 'System Settings'
  - Safari
+ - Freeform
 dockitems_persist:
- - name: "Terminal"
-   path: "/Applications/Utilities/Terminal.app"
+ - name: 'Google Chrome'
+   path: '/Applications/Google Chrome.app'
    pos: 5
- - name: "Google Chrome"
-   path: "/Applications/Google Chrome.app"
+ - name: 'Discord'
+   path: '/Applications/Discord.app'
    pos: 6
- - name: "Visual Studio Code"
-   path: "/Applications/Visual Studio Code.app"
+ - name: 'Visual Studio Code'
+   path: '/Applications/Visual Studio Code.app'
    pos: 7
- - name: "Discord"
-   path: "/Applications/Discord.app"
+ - name: 'iTerm2'
+   path: '/Applications/iTerm2.app'
    pos: 8
 
 configure_sudoers: false
